[package]
name = "ghostspeak-marketplace"
version = "0.1.0"
description = "GhostSpeak Marketplace: Decentralized AI Agent Commerce Protocol"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("anchor-debug"))'] }
ambiguous_glob_reexports = "allow"
deprecated = "allow"

[lib]
crate-type = ["cdylib"]
name = "ghostspeak_marketplace"
[features]
default = ["performance-monitoring"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = [
    "anchor-lang/idl-build", 
    "anchor-spl/idl-build",
    "spl-account-compression/idl-build"
]
performance-monitoring = []
compute-optimization = []
gas-efficient = []
devnet = []

# Profiles are defined at workspace level

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token", "token_2022"] }
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0", features = ["no-entrypoint"] }
# spl-account-compression = { version = "1.0", features = ["no-entrypoint"] } # Ready - needs compatible version
spl-concurrent-merkle-tree = "1.0"
spl-token-metadata-interface = "0.7"
thiserror = "2.0"
anyhow = "1.0"
blake3 = "1.5"
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.23", features = ["derive"] }
log = "0.4"
spl-account-compression = { version = "1.0.0", features = ["no-entrypoint", "cpi"] }
spl-noop = { version = "1.0.0", features = ["no-entrypoint"] }
# Remove proc-macro2 constraint to use system default

[dev-dependencies]
solana-program-test = "3.0"
solana-sdk = "2.3"
tokio = { version = "1.47", features = ["rt", "macros"] } 